// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Notify basic notification 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="Notifystory__Container-sc-1spq07j-1 bRUIpn"
    >
      <div
        class="notifystyle__Styles-sc-1knaqc4-0 jsEnKl"
      >
        <div
          class="Toastify"
        />
      </div>
      <div
        class="inherited-height  indexstyle__RowStyles-sc-7zwqmf-0 djeDtC"
      >
        <div
          class="row default-width position-center text-align-left bottom normal "
        >
          <div
            class="col-lg-4 col-lg-offset-0 "
          >
            <div
              class="buttonstyle__ButtonStyles-sc-13swllz-0 dhaSjL"
            >
              <button
                class=" primary"
                type="button"
              >
                <div
                  class="component-child"
                >
                  Info
                </div>
              </button>
            </div>
          </div>
          <div
            class="col-lg-4 col-lg-offset-0 "
          >
            <div
              class="buttonstyle__ButtonStyles-sc-13swllz-0 dhaSjL"
            >
              <button
                class=" primary"
                type="button"
              >
                <div
                  class="component-child"
                >
                  Error
                </div>
              </button>
            </div>
          </div>
          <div
            class="col-lg-4 col-lg-offset-0 "
          >
            <div
              class="buttonstyle__ButtonStyles-sc-13swllz-0 dhaSjL"
            >
              <button
                class=" primary"
                type="button"
              >
                <div
                  class="component-child"
                >
                  Success
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Notify
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            basic notification
          </h2>
        </div>
        <div
          style="margin-bottom:0"
        >
          <div
            style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-size:15px"
          >
            Basic notify
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;ForwardRef
                  </span>
                  <span />
                  <span
                    style="color:#444"
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;StyledComponent
                    </span>
                    <span>
                      <span>
                         
                        <span>
                          forwardedComponent
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#666"
                            >
                              {
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  $$typeof
                                </span>
                              </span>
                              : 
                              <span>
                                …
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  render
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#170"
                              >
                                anonymous
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  attrs
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#666"
                              >
                                []
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                …
                              </span>
                              <span>
                                <br />
                                  
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          forwardedRef
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#444"
                            >
                              null
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style="padding-left:48px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;NotifyContainer
                    </span>
                    <span />
                    <span
                      style="color:#444"
                    >
                      /&gt;
                    </span>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;Row
                      </span>
                      <span>
                        <span>
                           
                          <span>
                            position
                          </span>
                          <span>
                            =
                            <span>
                              "
                              <span
                                style="color:#22a;word-break:break-word"
                              >
                                center
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span>
                            verticalAlign
                          </span>
                          <span>
                            =
                            <span>
                              "
                              <span
                                style="color:#22a;word-break:break-word"
                              >
                                bottom
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div>
                      <div
                        style="padding-left:63px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          &lt;Col
                        </span>
                        <span>
                          <span>
                             
                            <span>
                              lg
                            </span>
                            <span>
                              =
                              <span>
                                {
                                <span
                                  style="color:#a11"
                                >
                                  4
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          style="color:#444"
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style="padding-left:78px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            &lt;Button
                          </span>
                          <span>
                            <span>
                               
                              <span>
                                onClick
                              </span>
                              <span>
                                =
                                <span>
                                  {
                                  <span
                                    style="color:#170"
                                  >
                                    info
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            style="color:#444"
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style="padding-left:93px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            Info
                          </span>
                        </div>
                        <div
                          style="padding-left:78px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            &lt;/Button&gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style="padding-left:63px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          &lt;/Col&gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style="padding-left:63px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          &lt;Col
                        </span>
                        <span>
                          <span>
                             
                            <span>
                              lg
                            </span>
                            <span>
                              =
                              <span>
                                {
                                <span
                                  style="color:#a11"
                                >
                                  4
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          style="color:#444"
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style="padding-left:78px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            &lt;Button
                          </span>
                          <span>
                            <span>
                               
                              <span>
                                onClick
                              </span>
                              <span>
                                =
                                <span>
                                  {
                                  <span
                                    style="color:#170"
                                  >
                                    error
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            style="color:#444"
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style="padding-left:93px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            Error
                          </span>
                        </div>
                        <div
                          style="padding-left:78px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            &lt;/Button&gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style="padding-left:63px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          &lt;/Col&gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style="padding-left:63px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          &lt;Col
                        </span>
                        <span>
                          <span>
                             
                            <span>
                              lg
                            </span>
                            <span>
                              =
                              <span>
                                {
                                <span
                                  style="color:#a11"
                                >
                                  4
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          style="color:#444"
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style="padding-left:78px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            &lt;Button
                          </span>
                          <span>
                            <span>
                               
                              <span>
                                onClick
                              </span>
                              <span>
                                =
                                <span>
                                  {
                                  <span
                                    style="color:#170"
                                  >
                                    success
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                          </span>
                          <span
                            style="color:#444"
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style="padding-left:93px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            Success
                          </span>
                        </div>
                        <div
                          style="padding-left:78px;padding-right:3px"
                        >
                          <span
                            style="color:#444"
                          >
                            &lt;/Button&gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style="padding-left:63px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          &lt;/Col&gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/Row&gt;
                      </span>
                    </div>
                  </div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;/StyledComponent&gt;
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;/ForwardRef&gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Button" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    children
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      node
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    onClick
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      func
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#170"
                    >
                      onClick
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    type
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      primary
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    htmlType
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      button
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    style
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#666"
                    >
                      {}
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    disabled
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    className
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    />
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Col" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    children
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      node
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    style
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#666"
                    >
                      {}
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    offsetXs
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    offsetSm
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    offsetMd
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    offset
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      0
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    lg
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      12
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    md
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    sm
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    xs
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "NotifyContainer" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "Row" Component
            </h2>
            <table>
              <thead>
                <tr>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    property
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    propType
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    required
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    default
                  </th>
                  <th
                    style="text-align:left;vertical-align:top"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    style
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#666"
                    >
                      {}
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    children
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      node
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    yes
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    space
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      normal
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    verticalAlign
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      top
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    position
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      start
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    positionMd
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    positionSm
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    positionXs
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    reverse
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    column
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    fullWidth
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#a11"
                    >
                      false
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    textAlign
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#22a;word-break:break-word"
                    >
                      left
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    textAlignMd
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    textAlignSm
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
                <tr>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    textAlignXs
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    -
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  >
                    <span
                      style="color:#444"
                    >
                      null
                    </span>
                  </td>
                  <td
                    style="padding-right:10px;vertical-align:top"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "StyledComponent" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Notify documentation 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      class="Notifystory__PageLayout-sc-1spq07j-0 daPKzB"
    >
      <h2>
        Notification Docs
      </h2>
      <h3>
        Overview
      </h3>
      <p>
        To begin, notifications are used when you need to notify a user about some action they need to take. They can also be used to notify users about updated state (CRUD functions) and also can be incredibly convenient for displaying error notifys.
      </p>
      <p>
        In the Vivy component library we abstract a lot of the logic away to the 
        <a
          href="https://github.com/fkhadra/react-toastify#readme"
        >
          react-toastify
        </a>
         library. This allows us to apply custom styles to our own notify components while avoiding having to maintain a lot of code around the components logic. While in the library we abstract away the API with the Message component you can find most of what you can do with the notify component in the toastify readme.
      </p>
      <h3>
        Quick Start
      </h3>
      <p>
        To get started with notifys you first need to import the NotifyContainer component into your app. Typically this is inside your app.jsx file or typically where you initialize your app code. After initializing this component, all you need to do is import the notify() function and call it whenever you want to display a notify. The below stories have examples of how to do this and how to pass optional configurations.
      </p>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Notify
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            documentation
          </h2>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <pre
            style="display:flex;justify-content:space-between;align-items:center;font-size:.88em;font-family:Menlo, Monaco, \\"Courier New\\", monospace;background-color:#fafafa;padding:.5rem;line-height:1.5;overflow-x:scroll"
          >
            <div>
              <div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;ForwardRef
                  </span>
                  <span />
                  <span
                    style="color:#444"
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;StyledComponent
                    </span>
                    <span>
                      <span>
                         
                        <span>
                          forwardedComponent
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#666"
                            >
                              {
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  $$typeof
                                </span>
                              </span>
                              : 
                              <span>
                                …
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  render
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#170"
                              >
                                anonymous
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                <span
                                  style="color:#666"
                                >
                                  attrs
                                </span>
                              </span>
                              : 
                              <span
                                style="color:#666"
                              >
                                []
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                      
                                </span>
                                …
                              </span>
                              <span>
                                <br />
                                  
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span>
                          forwardedRef
                        </span>
                        <span>
                          =
                          <span>
                            {
                            <span
                              style="color:#444"
                            >
                              null
                            </span>
                            }
                          </span>
                        </span>
                      </span>
                    </span>
                    <span
                      style="color:#444"
                    >
                      &gt;
                    </span>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;h2
                      </span>
                      <span />
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        Notification Docs
                      </span>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/h2&gt;
                      </span>
                    </div>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;h3
                      </span>
                      <span />
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        Overview
                      </span>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/h3&gt;
                      </span>
                    </div>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;p
                      </span>
                      <span />
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        To begin, notifications are used when you need to notify a user about some action they need to take. They can also be used to notify users about updated state (CRUD functions) and also can be incredibly convenient for displaying error notifys.
                      </span>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/p&gt;
                      </span>
                    </div>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;p
                      </span>
                      <span />
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        In the Vivy component library we abstract a lot of the logic away to the
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                         
                      </span>
                    </div>
                    <div>
                      <div
                        style="padding-left:63px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          &lt;a
                        </span>
                        <span>
                          <span>
                             
                            <span>
                              href
                            </span>
                            <span>
                              =
                              <span>
                                "
                                <span
                                  style="color:#22a;word-break:break-word"
                                >
                                  https://github.com/fkhadra/react-toastify#readme
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span
                          style="color:#444"
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style="padding-left:78px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          react-toastify
                        </span>
                      </div>
                      <div
                        style="padding-left:63px;padding-right:3px"
                      >
                        <span
                          style="color:#444"
                        >
                          &lt;/a&gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                         
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        library. This allows us to apply custom styles to our own notify components while avoiding having to maintain a lot of code around the components logic. While in the library we abstract away the API with the Message component you can find most of what you can do with the notify component in the toastify readme.
                      </span>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/p&gt;
                      </span>
                    </div>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;h3
                      </span>
                      <span />
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        Quick Start
                      </span>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/h3&gt;
                      </span>
                    </div>
                  </div>
                  <div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;p
                      </span>
                      <span />
                      <span
                        style="color:#444"
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style="padding-left:63px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        To get started with notifys you first need to import the NotifyContainer component into your app. Typically this is inside your app.jsx file or typically where you initialize your app code. After initializing this component, all you need to do is import the notify() function and call it whenever you want to display a notify. The below stories have examples of how to do this and how to pass optional configurations.
                      </span>
                    </div>
                    <div
                      style="padding-left:48px;padding-right:3px"
                    >
                      <span
                        style="color:#444"
                      >
                        &lt;/p&gt;
                      </span>
                    </div>
                  </div>
                  <div
                    style="padding-left:33px;padding-right:3px"
                  >
                    <span
                      style="color:#444"
                    >
                      &lt;/StyledComponent&gt;
                    </span>
                  </div>
                </div>
                <div
                  style="padding-left:18px;padding-right:3px"
                >
                  <span
                    style="color:#444"
                  >
                    &lt;/ForwardRef&gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              style="background-color:rgb(255, 255, 255);cursor:pointer;font-size:13px;align-self:flex-start;flex-shrink:0;overflow:hidden;border-width:1px;border-style:solid;border-color:rgb(238, 238, 238);border-image:initial;border-radius:3px;padding:3px 10px"
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h2
              style="margin:20px 0 0 0"
            >
              "StyledComponent" Component
            </h2>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
